chore(deps): upgrade demo

--- a/demo/mpx-app/static/wx/project.config.json
+++ b/demo/mpx-app/static/wx/project.config.json
@@ -12,9 +12,10 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "condition": false
+    "condition": false,
+    "ignoreUploadUnusedFiles": true
   },
-  "appid": "touristappid",
+  "appid": "wx6ffee4673b257014",
   "projectname": "mpx-project",
   "description": "A mpx project",
   "condition": {},
