--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -90,7 +90,7 @@
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.9.2-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.9.2",
     "webpack": "^5.88.2"
   }
 }
