--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "mpx-cli-service serve",
     "serve": "mpx-cli-service serve",
     "build": "mpx-cli-service build",
     "test:e2e": "npx e2e-runner j---config=./jest-e2e.config.js",
@@ -13,8 +14,8 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.8.40",
-    "@mpxjs/core": "^2.8.40",
+    "@mpxjs/api-proxy": "^2.8.46",
+    "@mpxjs/core": "^2.8.44",
     "@mpxjs/fetch": "^2.8.0",
     "@mpxjs/pinia": "^2.8.0",
     "@mpxjs/store": "^2.8.40",
@@ -23,20 +24,20 @@
     "vue": "^2.6.14",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^8.27.2",
-    "vue-i18n-bridge": "^9.2.2",
+    "vue-i18n-bridge": "^9.4.1",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/runtime-corejs3": "^7.22.11",
+    "@babel/core": "^7.22.20",
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/runtime-corejs3": "^7.22.15",
     "@mpxjs/babel-plugin-inject-page-events": "^2.8.0",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
     "@mpxjs/mpx-cli-service": "^2.0.7",
     "@mpxjs/mpx-jest": "^0.0.27",
-    "@mpxjs/size-report": "^2.8.40",
+    "@mpxjs/size-report": "^2.8.42",
     "@mpxjs/vue-cli-plugin-mpx": "^2.0.7",
     "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.0.7",
     "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.0.7",
@@ -44,17 +45,17 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.0.7",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.2.4",
-    "babel-jest": "^29.6.4",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.48.0",
-    "jest": "^29.6.4",
-    "postcss": "^8.4.28",
+    "eslint": "^8.49.0",
+    "jest": "^29.7.0",
+    "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.66.1",
+    "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
-    "stylus": "^0.59.0",
+    "stylus": "^0.60.0",
     "stylus-loader": "^7.1.3",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
@@ -65,7 +66,7 @@
     "vue-template-compiler": "^2.6.14",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.9.1",
+    "weapp-tailwindcss-webpack-plugin": "^2.9.2",
     "webpack": "^5.43.0"
   },
   "browserslist": [
