chore: add pinia for defineStore is not a function

--- a/demo-linked/uni-app-vite/tsconfig.json
+++ b/demo-linked/uni-app-vite/tsconfig.json
@@ -13,6 +13,12 @@
       "esnext",
       "dom"
     ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "types": [
       "@dcloudio/types",
       "miniprogram-api-typings"
