--- a/demo-linked/uni-app-vite/package.json
+++ b/demo-linked/uni-app-vite/package.json
@@ -53,6 +53,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
     "dayjs": "^1.11.9",
+    "pinia": "~2.0.36",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
