chore: show case 使用原生小程序开发模板时，如何使用其他npm包？ #244

--- a/demo/gulp-app/project.config.json
+++ b/demo/gulp-app/project.config.json
@@ -12,7 +12,14 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "condition": false
+    "condition": false,
+    "packNpmManually": true,
+    "packNpmRelationList": [
+      {
+        "packageJsonPath": "./package.json",
+        "miniprogramNpmDistDir": "./dist"
+      }
+    ]
   },
   "appid": "wx6ffee4673b257014",
   "projectname": "weapp-wf",
