--- a/demo/gulp-app/tsconfig.json
+++ b/demo/gulp-app/tsconfig.json
@@ -14,6 +14,11 @@
     "noEmitOnError": false,
     "types": [
       "miniprogram-api-typings"
-    ]
+    ],
+    "paths": {
+      "@vant/weapp/*": [
+        "./miniprogram_npm/@vant/weapp/dist/*"
+      ]
+    }
   }
 }
