--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -25,20 +25,20 @@
   "license": "MIT",
   "devDependencies": {
     "@icebreakers/eslint-config-ts": "^1.2.2",
-    "@types/gulp": "^4.0.13",
-    "@types/gulp-debug": "^2.0.33",
-    "@types/gulp-if": "^3.0.1",
-    "@types/gulp-plumber": "^0.0.34",
-    "@types/gulp-postcss": "^8.0.3",
-    "@types/gulp-rename": "^2.0.2",
+    "@types/gulp": "^4.0.14",
+    "@types/gulp-debug": "^2.0.34",
+    "@types/gulp-if": "^3.0.2",
+    "@types/gulp-plumber": "^0.0.35",
+    "@types/gulp-postcss": "^8.0.4",
+    "@types/gulp-rename": "^2.0.3",
     "@types/gulp-replace": "^1.1.0",
-    "@types/gulp-sass": "^5.0.1",
-    "@types/gulp-util": "^3.0.38",
-    "@types/node": "^20.5.7",
-    "autoprefixer": "^10.4.15",
+    "@types/gulp-sass": "^5.0.2",
+    "@types/gulp-util": "^3.0.39",
+    "@types/node": "^20.6.3",
+    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "gulp": "^4.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-debug": "^4.0.0",
@@ -54,20 +54,23 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-util": "^3.0.8",
     "miniprogram-api-typings": "^3.12.0",
-    "postcss": "^8.4.28",
-    "postcss-pxtransform": "^3.6.14",
+    "postcss": "^8.4.30",
+    "postcss-pxtransform": "^3.6.16",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "prettier": "^3.0.3",
-    "sass": "^1.66.1",
+    "sass": "^1.68.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^2.2.1",
+    "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^2.9.2"
+  },
+  "dependencies": {
+    "@vant/weapp": "^1.11.0"
   }
 }
