--- a/package.json
+++ b/package.json
@@ -152,28 +152,29 @@
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.3",
+    "@swc/core": "^1.3.88",
     "@tsconfig/recommended": "^1.0.3",
     "@types/babel__generator": "^7.6.5",
     "@types/babel__traverse": "^7.20.2",
-    "@types/debug": "^4.1.8",
-    "@types/diff": "^5.0.4",
+    "@types/debug": "^4.1.9",
+    "@types/diff": "^5.0.5",
     "@types/fs-extra": "^11.0.2",
-    "@types/gulp": "^4.0.13",
-    "@types/gulp-postcss": "^8.0.3",
+    "@types/gulp": "^4.0.14",
+    "@types/gulp-postcss": "^8.0.4",
     "@types/jest": "^29.5.5",
     "@types/js-beautify": "^1.14.1",
     "@types/klaw": "^3.0.4",
     "@types/loader-utils": "^2.0.4",
-    "@types/lodash": "^4.14.198",
+    "@types/lodash": "^4.14.199",
     "@types/md5": "^2.3.2",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.6.2",
+    "@types/node": "^20.6.4",
     "@types/semver": "^7.5.2",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.2",
     "@types/webpack-sources": "^3.2.0",
-    "@vitest/coverage-v8": "^0.34.4",
-    "autoprefixer": "^10.4.15",
+    "@vitest/coverage-v8": "^0.34.5",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.2.0",
     "colorette": "^2.0.20",
@@ -184,7 +185,7 @@
     "del": "^7.1.0",
     "diff": "^5.1.0",
     "domhandler": "^5.0.3",
-    "eslint": "8.49.0",
+    "eslint": "8.50.0",
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -206,7 +207,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^3.0.3",
     "promisify-loader-runner": "^1.0.0",
-    "rollup": "^3.29.2",
+    "rollup": "^3.29.3",
     "rollup-plugin-visualizer": "^5.9.2",
     "style-loader": "^3.3.3",
     "tailwind-children": "^0.5.0",
@@ -220,7 +221,7 @@
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
     "vite": "^4.4.9",
-    "vitest": "^0.34.4",
+    "vitest": "^0.34.5",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
     "webpack-build-utils": "^0.0.4"
@@ -232,7 +233,7 @@
     "@babel/traverse": "^7.22.20",
     "@babel/types": "^7.22.19",
     "@csstools/postcss-is-pseudo-class": "^4.0.2",
-    "@tailwindcss-mangle/shared": "^2.2.1",
+    "@tailwindcss-mangle/shared": "^2.2.2",
     "@weapp-core/escape": "^2.0.0",
     "@weapp-core/regex": "^1.0.1",
     "debug": "^4.3.4",
@@ -245,7 +246,7 @@
     "postcss": "8.4.30",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.4",
-    "tailwindcss-patch": "^2.2.1"
+    "tailwindcss-patch": "^2.2.2"
   },
   "packageManager": "pnpm@8.7.4",
   "engines": {
