chore: add sass for css2plugin support

--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
     "prepare": "ts-patch install -s",
     "release": "bumpp",
+    "css-build": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css",
+    "css-build-out": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css --out tw-plugins",
     "-------": "-----------",
     "postinstall": "node bin/weapp-tailwindcss.js patch"
   },
@@ -180,6 +182,7 @@
     "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "css-to-tailwindcss-plugin": "^0.0.2",
     "dedent": "^1.5.1",
     "defu": "6.1.2",
     "del": "^7.1.0",
@@ -209,6 +212,7 @@
     "promisify-loader-runner": "^1.0.0",
     "rollup": "^3.29.3",
     "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.68.0",
     "style-loader": "^3.3.3",
     "tailwind-children": "^0.5.0",
     "tailwindcss": "^3.3.3",
