--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.9.2",
+  "version": "2.9.3-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -145,7 +145,7 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.23.0",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
@@ -153,8 +153,8 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.3",
-    "@swc/core": "^1.3.88",
+    "@rollup/plugin-typescript": "^11.1.4",
+    "@swc/core": "^1.3.89",
     "@tsconfig/recommended": "^1.0.3",
     "@types/babel__generator": "^7.6.5",
     "@types/babel__traverse": "^7.20.2",
@@ -170,11 +170,11 @@
     "@types/lodash": "^4.14.199",
     "@types/md5": "^2.3.2",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.6.4",
-    "@types/semver": "^7.5.2",
-    "@types/vinyl": "^2.0.7",
-    "@types/webpack": "^5.28.2",
-    "@types/webpack-sources": "^3.2.0",
+    "@types/node": "^20.7.0",
+    "@types/semver": "^7.5.3",
+    "@types/vinyl": "^2.0.8",
+    "@types/webpack": "^5.28.3",
+    "@types/webpack-sources": "^3.2.1",
     "@vitest/coverage-v8": "^0.34.5",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
@@ -182,7 +182,7 @@
     "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
-    "css-to-tailwindcss-plugin": "^0.0.2",
+    "css-to-tailwindcss-plugin": "^0.0.3",
     "dedent": "^1.5.1",
     "defu": "6.1.2",
     "del": "^7.1.0",
@@ -232,10 +232,10 @@
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
-    "@babel/generator": "^7.22.15",
-    "@babel/parser": "^7.22.16",
-    "@babel/traverse": "^7.22.20",
-    "@babel/types": "^7.22.19",
+    "@babel/generator": "^7.23.0",
+    "@babel/parser": "^7.23.0",
+    "@babel/traverse": "^7.23.0",
+    "@babel/types": "^7.23.0",
     "@csstools/postcss-is-pseudo-class": "^4.0.2",
     "@tailwindcss-mangle/shared": "^2.2.2",
     "@weapp-core/escape": "^2.0.0",
