--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -34,11 +34,11 @@
     "@types/gulp-replace": "^1.1.0",
     "@types/gulp-sass": "^5.0.2",
     "@types/gulp-util": "^3.0.39",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.7.0",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
-    "eslint": "^8.49.0",
+    "eslint": "^8.50.0",
     "gulp": "^4.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-debug": "^4.0.0",
@@ -55,7 +55,7 @@
     "gulp-util": "^3.0.8",
     "miniprogram-api-typings": "^3.12.0",
     "postcss": "^8.4.30",
-    "postcss-pxtransform": "^3.6.16",
+    "postcss-pxtransform": "^3.6.17",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "prettier": "^3.0.3",
@@ -68,7 +68,7 @@
     "typescript": "^5.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.9.2"
+    "weapp-tailwindcss-webpack-plugin": "^2.9.3-beta.0"
   },
   "dependencies": {
     "@vant/weapp": "^1.11.0"
