chore: regist how-to-build-components-by-tailwindcss-react pkg

--- a/how-to-build-components-by-tailwindcss/react-lib/package.json
+++ b/how-to-build-components-by-tailwindcss/react-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "how-to-build-components-by-tailwindcss-react",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,6 +19,15 @@
     ".": {
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js"
+    },
+    "./*": "./*"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*",
+        "./dist/index.d.ts"
+      ]
     }
   },
   "devDependencies": {
