--- a/demo-linked/uni-app-webpack5/package.json
+++ b/demo-linked/uni-app-webpack5/package.json
@@ -53,55 +53,55 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-app-plus": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-h5": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-app": "2.0.2-3081220230817001",
+    "@dcloudio/uni-app-plus": "2.0.2-3081220230817001",
+    "@dcloudio/uni-h5": "2.0.2-3081220230817001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-360": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-stat": "2.0.2-alpha-3081220230802001",
-    "@vue/shared": "^3.0.0",
+    "@dcloudio/uni-i18n": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-360": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-jd": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-lark": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-qq": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-vue": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-3081220230817001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-3081220230817001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-3081220230817001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-3081220230817001",
+    "@dcloudio/uni-stacktracey": "2.0.2-3081220230817001",
+    "@dcloudio/uni-stat": "2.0.2-3081220230817001",
+    "@vue/shared": "^3.3.4",
     "core-js": "^3.29.1",
-    "flyio": "^0.6.2",
+    "flyio": "^0.6.14",
     "regenerator-runtime": "^0.13.11",
     "vue": ">= 2.6.14 < 2.7",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^8.0.0",
-    "vuex": "^3.2.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.22.5",
-    "@babel/runtime": "~7.22.10",
+    "@babel/runtime": "~7.23.2",
     "@dcloudio/types": "^3.3.3",
-    "@dcloudio/uni-automator": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-migration": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3081220230802001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-automator": "2.0.2-3081220230817001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-3081220230817001",
+    "@dcloudio/uni-cli-shared": "2.0.2-3081220230817001",
+    "@dcloudio/uni-migration": "2.0.2-3081220230817001",
+    "@dcloudio/uni-template-compiler": "2.0.2-3081220230817001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3081220230817001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-3081220230817001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3081220230817001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3081220230817001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-3081220230817001",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "babel-plugin-import": "^1.11.0",
-    "cross-env": "^7.0.2",
-    "jest": "^29.7.0",
+    "babel-plugin-import": "^1.13.8",
+    "cross-env": "^7.0.3",
+    "jest": "^25.5.4",
     "mini-css-extract-plugin": "^2.7.6",
     "mini-types": "*",
     "miniprogram-api-typings": "3.12.0",
