--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -67,7 +67,7 @@
     "typescript": "^5.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.10.0-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.10.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-sources": "^3.2.3"
