--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -83,7 +83,7 @@
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.10.0-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.10.0",
     "webpack": "^5.88.2"
   }
 }
