--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -66,7 +66,7 @@
     "vue-template-compiler": "^2.6.14",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.10.1-beta.4",
+    "weapp-tailwindcss-webpack-plugin": "^2.10.1",
     "webpack": "^5.43.0"
   },
   "browserslist": [
