chore(deps): upgrade tailwindcss to 3.3.5

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "build:demo": "yarn demo:del-dist && cross-env NODE_ENV=demo rollup -c rollup.config.ts --configPlugin typescript && yarn demo:sync-dist",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
-    "test": "cross-env DEBUG=weapp-tw jest && vitest run",
+    "test": "npm run postinstall && cross-env DEBUG=weapp-tw jest && vitest run",
     "jest-u": "jest -u",
     "jest:u": "jest -u",
     "test:dev": "vitest",
@@ -179,7 +179,7 @@
     "@types/lodash": "^4.14.200",
     "@types/md5": "^2.3.4",
     "@types/micromatch": "^4.0.4",
-    "@types/node": "^20.8.7",
+    "@types/node": "^20.8.8",
     "@types/semver": "^7.5.4",
     "@types/vinyl": "^2.0.9",
     "@types/webpack": "^5.28.4",
@@ -193,7 +193,7 @@
     "css-loader": "^6.8.1",
     "css-to-tailwindcss-plugin": "^0.2.5",
     "dedent": "^1.5.1",
-    "defu": "6.1.2",
+    "defu": "6.1.3",
     "del": "^7.1.0",
     "diff": "^5.1.0",
     "domhandler": "^5.0.3",
@@ -224,7 +224,7 @@
     "sass": "^1.69.4",
     "style-loader": "^3.3.3",
     "tailwind-children": "^0.5.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
