chore(demo): upgrade deps

--- a/demo/mpx-app/static/wx/project.config.json
+++ b/demo/mpx-app/static/wx/project.config.json
@@ -13,20 +13,24 @@
       "outputPath": ""
     },
     "condition": false,
-    "ignoreUploadUnusedFiles": true
+    "ignoreUploadUnusedFiles": true,
+    "coverView": false,
+    "enhance": false,
+    "showShadowRootInWxmlPanel": false,
+    "packNpmRelationList": []
   },
   "appid": "wx6ffee4673b257014",
-  "projectname": "mpx-project",
   "description": "A mpx project",
   "condition": {},
   "compileType": "miniprogram",
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
+  },
+  "projectname": "mpx-project",
   "libVersion": "2.25.2",
   "packOptions": {
     "ignore": [],
     "include": []
-  },
-  "editorSetting": {
-    "tabIndent": "insertSpaces",
-    "tabSize": 2
   }
 }
