--- a/demo-linked/uni-app-vite/package.json
+++ b/demo-linked/uni-app-vite/package.json
@@ -39,43 +39,45 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3081220230817001",
-    "@dcloudio/uni-app-plus": "3.0.0-3081220230817001",
-    "@dcloudio/uni-components": "3.0.0-3081220230817001",
-    "@dcloudio/uni-h5": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-jd": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-lark": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-qq": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
+    "@dcloudio/uni-app": "3.0.0-3090420231025001",
+    "@dcloudio/uni-app-plus": "3.0.0-3090420231025001",
+    "@dcloudio/uni-components": "3.0.0-3090420231025001",
+    "@dcloudio/uni-h5": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-jd": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-3090420231025001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3090420231025001",
     "dayjs": "^1.11.9",
     "pinia": "~2.0.14",
-    "vue": "^3.2.45",
+    "vue": "^3.3.7",
     "vue-i18n": "^9.5.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.4.0",
-    "@dcloudio/uni-automator": "3.0.0-3081220230817001",
-    "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
-    "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+    "@dcloudio/types": "^3.4.1",
+    "@dcloudio/uni-automator": "3.0.0-3090420231025001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3090420231025001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3090420231025001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3090420231025001",
+    "@vue/runtime-core": "^3.2.45",
     "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
     "miniprogram-api-typings": "^3.12.0",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.31",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.68.0",
+    "sass": "^1.69.5",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.2.2",
-    "vite": "4.4.9",
+    "vite": "4.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "link:../.."
