--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -39,19 +39,20 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3081220230817001",
-    "@dcloudio/uni-app-plus": "3.0.0-3081220230817001",
-    "@dcloudio/uni-components": "3.0.0-3081220230817001",
-    "@dcloudio/uni-h5": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-jd": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-lark": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-qq": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
+    "@dcloudio/uni-app": "3.0.0-3090420231025001",
+    "@dcloudio/uni-app-plus": "3.0.0-3090420231025001",
+    "@dcloudio/uni-components": "3.0.0-3090420231025001",
+    "@dcloudio/uni-h5": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-jd": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3090420231025001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-3090420231025001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3090420231025001",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.9",
     "eventemitter3": "^4.0.7",
@@ -65,10 +66,11 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.3.2",
-    "@dcloudio/uni-automator": "3.0.0-3081220230817001",
-    "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
-    "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+    "@dcloudio/uni-automator": "3.0.0-3090420231025001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3090420231025001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3090420231025001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3090420231025001",
+    "@vue/runtime-core": "^3.2.45",
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.6.3",
     "miniprogram-api-typings": "^3.12.0",
@@ -81,7 +83,7 @@
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
-    "vite": "4.1.4",
+    "vite": "4.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^2.10.1"
