--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -118,7 +118,7 @@
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.11.0-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.11.0"
   },
   "browserslist": [
     "Android >= 4.4",
