--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -14,12 +14,12 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.8.58",
-    "@mpxjs/core": "^2.8.56",
-    "@mpxjs/fetch": "^2.8.0",
-    "@mpxjs/pinia": "^2.8.52",
-    "@mpxjs/store": "^2.8.52",
-    "@mpxjs/utils": "^2.8.52",
+    "@mpxjs/api-proxy": "^2.9.1",
+    "@mpxjs/core": "^2.9.1",
+    "@mpxjs/fetch": "^2.9.1",
+    "@mpxjs/pinia": "^2.9.1",
+    "@mpxjs/store": "^2.9.1",
+    "@mpxjs/utils": "^2.9.1",
     "pinia": "^2.1.7",
     "vue": "^2.6.14",
     "vue-demi": "^0.13.11",
@@ -28,26 +28,27 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-transform-runtime": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/runtime-corejs3": "^7.23.2",
-    "@mpxjs/babel-plugin-inject-page-events": "^2.8.0",
+    "@babel/core": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.4",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/runtime-corejs3": "^7.23.4",
+    "@mpxjs/babel-plugin-inject-page-events": "^2.9.1",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
-    "@mpxjs/mpx-cli-service": "^2.0.7",
+    "@mpxjs/mpx-cli-service": "^2.1.1",
     "@mpxjs/mpx-jest": "^0.0.27",
-    "@mpxjs/size-report": "^2.8.51",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.0.7",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.0.7",
-    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.0.7",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.0.7",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.0.7",
+    "@mpxjs/size-report": "^2.9.1",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.1.1",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.1",
+    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.1",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.1",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.1",
+    "@mpxjs/webpack-plugin": "^2.9.1",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.52.0",
+    "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
@@ -55,14 +56,14 @@
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
-    "stylus": "^0.60.0",
+    "stylus": "^0.62.0",
     "stylus-loader": "^7.1.3",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "vue-template-compiler": "^2.7.15",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
