--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
   },
   "sideEffects": false,
   "scripts": {
-    "dev": "yarn clean && yarn dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
-    "build": "yarn clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && yarn dts",
-    "build:demo": "yarn demo:del-dist && cross-env NODE_ENV=demo rollup -c rollup.config.ts --configPlugin typescript && yarn demo:sync-dist",
+    "dev": "pnpm clean && pnpm dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
+    "build": "pnpm clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && pnpm dts",
+    "build:demo": "pnpm demo:del-dist && cross-env NODE_ENV=demo rollup -c rollup.config.ts --configPlugin typescript && pnpm demo:sync-dist",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "test": "npm run postinstall && vitest run",
@@ -81,7 +81,7 @@
     "e2e:u": "vitest run -u -c ./vitest.e2e.config.ts",
     "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
-    "debug:web": "cd demo/web && yarn dev",
+    "debug:web": "cd demo/web && pnpm dev",
     "raw": "ts-node scripts/raw",
     "get-decl": "ts-node scripts/get-decl.ts",
     "demo:dev": "node scripts/demo/dev.js",
