--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -67,7 +67,7 @@
     "vue-template-compiler": "^2.7.15",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.0-beta.3",
+    "weapp-tailwindcss-webpack-plugin": "^3.0.0",
     "webpack": "^5.89.0"
   },
   "browserslist": [
