--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -20,6 +20,6 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.0-beta.3"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.0"
   }
 }
