--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "test": "npm run postinstall && vitest run",
     "test:dev": "vitest",
+    "test:ui": "vitest --ui",
     "vitest:coverage": "vitest run --coverage",
     "e2e": "vitest run -c ./vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./vitest.e2e.config.ts",
@@ -185,10 +186,11 @@
     "@types/vinyl": "^2.0.11",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
-    "@vitest/coverage-v8": "^1.0.2",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
-    "bumpp": "^9.2.0",
+    "bumpp": "^9.2.1",
     "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
@@ -216,22 +218,22 @@
     "pkg-types": "^1.0.3",
     "postcss-load-config": "^5.0.2",
     "postcss-loader": "^7.3.3",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.6.1",
-    "rollup-plugin-visualizer": "^5.10.0",
+    "rollup": "^4.8.0",
+    "rollup-plugin-visualizer": "^5.11.0",
     "sass": "^1.69.5",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.6",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "ts-patch": "^3.1.1",
     "tsd": "^0.29.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^5.0.6",
-    "vitest": "^1.0.2",
+    "vite": "^5.0.7",
+    "vitest": "^1.0.4",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.89.0",
     "webpack-build-utils": "^0.0.7"
