--- a/demo-linked/uni-app-webpack4/package.json
+++ b/demo-linked/uni-app-webpack4/package.json
@@ -17,7 +17,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "source-map-js": "^1.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "weapp-tailwindcss-webpack-plugin": "link:../..",
+    "weapp-tailwindcss-webpack-plugin": "3.0.4-webpack4.0",
     "webpack": "npm:webpack@webpack-4"
   },
   "dependencies": {},
