--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -59,7 +59,7 @@
     "stylus": "^0.62.0",
     "stylus-loader": "^7.1.3",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^29.1.1",
@@ -67,7 +67,7 @@
     "vue-template-compiler": "^2.7.15",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.3",
+    "weapp-tailwindcss-webpack-plugin": "^3.0.4-beta.1",
     "webpack": "^5.89.0"
   },
   "browserslist": [
