--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -37,12 +37,12 @@
     "rax-app": "3.8.22",
     "stylelint": "^15.11.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.3"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.4-beta.1"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
