--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -75,7 +75,7 @@
     "postcss-rpx-transform": "^1.0.1",
     "stylelint": "15.11.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.2.2",
@@ -83,7 +83,7 @@
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.3",
+    "weapp-tailwindcss-webpack-plugin": "^3.0.4-beta.1",
     "webpack": "^5.89.0"
   }
 }
