--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -79,13 +79,13 @@
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.69.5",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "tailwindcss-patch": "^2.2.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "vite": "4.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.3"
+    "weapp-tailwindcss-webpack-plugin": "^3.0.4-beta.1"
   }
 }
