--- a/package.json
+++ b/package.json
@@ -173,7 +173,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
     "@tsconfig/recommended": "^1.0.3",
-    "@types/babel__generator": "^7.6.7",
+    "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.20.4",
     "@types/debug": "^4.1.12",
     "@types/diff": "^5.0.9",
@@ -206,8 +206,8 @@
     "del": "^7.1.0",
     "diff": "^5.1.0",
     "domhandler": "^5.0.3",
-    "eslint": "8.55.0",
-    "eslint-config-icebreaker": "^1.2.2",
+    "eslint": "8.56.0",
+    "eslint-config-icebreaker": "^1.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "execa": "^7.2.0",
@@ -226,7 +226,7 @@
     "postcss-loader": "^7.3.3",
     "prettier": "^3.1.1",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.9.0",
+    "rollup": "^4.9.1",
     "rollup-plugin-visualizer": "^5.11.0",
     "sass": "^1.69.5",
     "style-loader": "^3.3.3",
@@ -238,7 +238,7 @@
     "typescript": "^5.3.3",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^5.0.9",
+    "vite": "^5.0.10",
     "vitest": "^1.0.4",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.89.0",
@@ -246,11 +246,11 @@
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
-    "@babel/generator": "^7.23.5",
-    "@babel/parser": "^7.23.5",
-    "@babel/traverse": "^7.23.5",
-    "@babel/types": "^7.23.5",
-    "@csstools/postcss-is-pseudo-class": "^4.0.3",
+    "@babel/generator": "^7.23.6",
+    "@babel/parser": "^7.23.6",
+    "@babel/traverse": "^7.23.6",
+    "@babel/types": "^7.23.6",
+    "@csstools/postcss-is-pseudo-class": "4.0.3",
     "@tailwindcss-mangle/shared": "^2.2.2",
     "@weapp-core/escape": "^2.0.0",
     "@weapp-core/regex": "^1.0.1",
