chore: lock pkg version

--- a/package.json
+++ b/package.json
@@ -246,26 +246,26 @@
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
-    "@babel/generator": "^7.23.6",
-    "@babel/parser": "^7.23.6",
-    "@babel/traverse": "^7.23.7",
-    "@babel/types": "^7.23.6",
+    "@babel/generator": "7.23.6",
+    "@babel/parser": "7.23.6",
+    "@babel/traverse": "7.23.7",
+    "@babel/types": "7.23.6",
     "@csstools/postcss-is-pseudo-class": "4.0.3",
     "@tailwindcss-mangle/shared": "^2.2.2",
     "@weapp-core/escape": "^2.0.0",
     "@weapp-core/regex": "^1.0.1",
-    "debug": "^4.3.4",
+    "debug": "4.3.4",
     "htmlparser2": "9.0.0",
-    "loader-utils": "^2.0.3",
-    "lru-cache": "^10.1.0",
-    "magic-string": "^0.30.5",
-    "md5": "^2.3.0",
+    "loader-utils": "2.0.3",
+    "lru-cache": "10.1.0",
+    "magic-string": "0.30.5",
+    "md5": "2.3.0",
     "postcss": "8.4.33",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
-    "postcss-selector-parser": "^6.0.15",
-    "semver": "^7.5.4",
+    "postcss-selector-parser": "6.0.15",
+    "semver": "7.5.4",
     "tailwindcss-patch": "^2.2.2",
-    "webpack-sources": "^3.2.3"
+    "webpack-sources": "3.2.3"
   },
   "packageManager": "pnpm@8.10.2",
   "engines": {
