chore: docs update

--- a/plugins/typography/package.json
+++ b/plugins/typography/package.json
@@ -48,7 +48,7 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin/issues"
   },
-  "homepage": "https://weapp-tw.icebreaker.top",
+  "homepage": "https://weapp-tw.icebreaker.top/docs/community/typography",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git"
