chore: add process.env

--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "build:demo": "pnpm demo:del-dist && cross-env NODE_ENV=demo rollup -c rollup.config.ts --configPlugin typescript && pnpm demo:sync-dist",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
-    "test": "npm run postinstall && vitest run",
-    "test:dev": "vitest",
+    "test": "npm run postinstall && cross-env TARGET=1 vitest run",
+    "test:dev": "cross-env TARGET=1 vitest",
     "test:ui": "vitest --ui",
     "vitest:coverage": "vitest run --coverage",
     "e2e": "vitest run -c ./vitest.e2e.config.ts",
