test: fix e2e type error

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,15 @@
     "removeComments": true,
     "sourceMap": false
   },
-  "include": ["src/**/*", "types/**/*"],
-  "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+    "test/**/*",
+    "e2e/**/*",
+    "./*.d.ts"
+  ]
 }
