feat: use @ast-grep/napi findAll api

--- a/package.json
+++ b/package.json
@@ -186,7 +186,7 @@
     "@types/lodash": "^4.17.0",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.6",
-    "@types/node": "^20.11.26",
+    "@types/node": "^20.11.27",
     "@types/semver": "^7.5.8",
     "@types/vinyl": "^2.0.11",
     "@types/webpack": "^5.28.5",
@@ -228,7 +228,7 @@
     "promisify-loader-runner": "^1.0.1",
     "rollup": "^4.13.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
@@ -246,6 +246,7 @@
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
+    "@ast-grep/napi": "^0.19.4",
     "@babel/generator": "7.23.6",
     "@babel/parser": "7.24.0",
     "@babel/traverse": "7.24.0",
@@ -262,7 +263,7 @@
     "md5": "2.3.0",
     "postcss": "8.4.35",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
-    "postcss-selector-parser": "6.0.15",
+    "postcss-selector-parser": "6.0.16",
     "semver": "7.6.0",
     "tailwindcss-patch": "^2.2.3",
     "webpack-sources": "3.2.3"
