--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -7,6 +7,7 @@
     "dev:debug": "cross-env DEBUG=weapp-tw mpx-cli-service serve",
     "serve": "mpx-cli-service serve",
     "build": "mpx-cli-service build",
+    "build:babel": "cross-env BABEL=1 mpx-cli-service build",
     "test:e2e": "npx e2e-runner j---config=./jest-e2e.config.js",
     "lint": "eslint --ext .js,.ts,.mpx src/",
     "build:e2e": "npm run build && npm run test:e2e",
@@ -31,33 +32,33 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/runtime-corejs3": "^7.24.0",
+    "@babel/core": "^7.24.1",
+    "@babel/plugin-transform-runtime": "^7.24.1",
+    "@babel/preset-env": "^7.24.1",
+    "@babel/runtime-corejs3": "^7.24.1",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
     "@mpxjs/mpx-cli-service": "^2.1.8",
     "@mpxjs/mpx-jest": "^0.0.30",
-    "@mpxjs/size-report": "^2.9.14",
+    "@mpxjs/size-report": "^2.9.24",
     "@mpxjs/vue-cli-plugin-mpx": "^2.1.8",
     "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.8",
     "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.8",
     "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.8",
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.8",
-    "@mpxjs/webpack-plugin": "^2.9.21",
+    "@mpxjs/webpack-plugin": "^2.9.24",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.18",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.36",
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
