--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit",
     "start": "webpack --watch --progress",
     "build": "cross-env NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
+    "build:babel": "cross-env BABEL=1 NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
     "build:local": "cross-env LOCAL=1 NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
     "build:npm": "weapp build-npm -p",
     "preupload": "run-s build",
@@ -31,12 +32,12 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
+    "@babel/core": "^7.24.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-typescript": "^7.23.3",
-    "@types/lodash": "^4.14.202",
+    "@babel/plugin-transform-runtime": "^7.24.1",
+    "@babel/preset-env": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@types/lodash": "^4.17.0",
     "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "babel-plugin-lodash": "^3.3.4",
@@ -49,7 +50,7 @@
     "lodash-webpack-plugin": "^0.11.5",
     "miniprogram-api-typings": "^3.12.2",
     "npm-run-all": "^4.1.2",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.36",
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
@@ -58,7 +59,7 @@
     "replace-ext": "^2.0.0",
     "required-path": "^1.0.1",
     "run-script-os": "^1.1.6",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.1",
