--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -5,6 +5,7 @@
     "dev": "cross-env DEBUG=weapp-tw uni -p mp-weixin",
     "dev:local": "cross-env LOCAL=1 uni -p mp-weixin",
     "build": "uni build -p mp-weixin",
+    "build:babel": "cross-env BABEL=1 uni build -p mp-weixin",
     "build:local": "cross-env LOCAL=1 uni build -p mp-weixin",
     "dev:app": "uni -p app",
     "dev:custom": "uni -p",
