Feature/ast grep (#283)
* feat: swc experiment support

* chore: use new swc.Compiler() try to fix span error

* feat: ast-grep support

* test: fix e2e type error

* v3.1.0-beta.0

* chore(demo): upgrade

* chore(demo): use default jsAstTool

* chore: remove @ast-grep/napi

* docs: update

* feat: use @ast-grep/napi findAll api

* v3.1.0-beta.1

* feat: make all transform api async

* v3.1.0-beta.2

* chore: prepare for rust engine

* test: add 中文字符 testCase

* test: add taro zh char test case

* chore: revert taro-vue3-app index page

* feat: use decodeUnicode function

* v3.1.0-beta.3

* chore: commit snap

* chore: remove data-sid and id

* chore: move SgNode to astGrepUpdateString method

* v3.1.0-beta.4

* chore(demo): upgrade deps

* test: add empty and short case

* chore: init benchmark project

* demo(bench): add benchmark data

* chore(deps): upgrade

* chore: make @ast-grep/napi optional

* v3.1.0-beta.5

* chore: demo upgrade

* docs: upgrade changelog

* chore: release v3.1.0

* chore(demo): upgrade

* docs: update

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,20 @@
       "cwd": "${workspaceFolder}/demo/taro-app"
     },
     {
+      "command": "yarn dev",
+      "name": "[Demo] taro-vue3-app run weapp dev",
+      "request": "launch",
+      "type": "node-terminal",
+      "cwd": "${workspaceFolder}/demo/taro-vue3-app"
+    },
+    {
+      "command": "yarn build",
+      "name": "[Demo] taro-vue3-app run weapp build",
+      "request": "launch",
+      "type": "node-terminal",
+      "cwd": "${workspaceFolder}/demo/taro-vue3-app"
+    },
+    {
       "command": "yarn dev:local",
       "name": "[Demo] local taro app run weapp dev",
       "request": "launch",
@@ -41,6 +55,13 @@
     {
       "command": "yarn dev",
       "name": "[Demo Mpx] Mpx dev",
+      "request": "launch",
+      "type": "node-terminal",
+      "cwd": "${workspaceFolder}/demo/mpx-app"
+    },
+    {
+      "command": "yarn build",
+      "name": "[Demo Mpx] Mpx build",
       "request": "launch",
       "type": "node-terminal",
       "cwd": "${workspaceFolder}/demo/mpx-app"
