--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -10,6 +10,7 @@
     "dev:local": "cross-env WATCH=1 LOCAL=1 gulp",
     "build:local": "cross-env LOCAL=1 gulp",
     "build": "gulp",
+    "build:babel": "cross-env BABEL=1 gulp",
     "build:tt": "cross-env PLATFORM=tt gulp",
     "prepare": "weapp-tw patch",
     "open": "weapp open -p"
@@ -71,7 +72,7 @@
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.11"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0"
   },
   "dependencies": {
     "@vant/weapp": "^1.11.4"
