--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -7,6 +7,7 @@
     "dev": "npm run start",
     "start": "rax-app start",
     "build": "rax-app build",
+    "build:babel": "cross-env BABEL=1 rax-app build",
     "build:local": "cross-env LOCAL=1 rax-app build",
     "eslint": "eslint --ext .js,.jsx,.tsx,.ts ./",
     "stylelint": "stylelint \"**/*.{css,scss,less}\"",
@@ -42,7 +43,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.11"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
