--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -6,6 +6,7 @@
     "serve": "npm run dev:h5",
     "build": "npm run build:mp-weixin",
     "dev": "npm run dev:mp-weixin",
+    "build:babel": "cross-env BABEL=1 npm run build:mp-weixin",
     "dev:local": "cross-env LOCAL=1 npm run dev:mp-weixin",
     "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
     "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
@@ -118,7 +119,7 @@
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.0.11"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0"
   },
   "browserslist": [
     "Android >= 4.4",
