--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "3.0.11",
+  "version": "3.1.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -92,6 +92,7 @@
     "get-decl": "ts-node scripts/get-decl.ts",
     "demo:dev": "node scripts/demo/dev.js",
     "demo:build": "node scripts/demo/build.js",
+    "demo:bench": "node scripts/demo/bench.js",
     "demo:build:local": "node scripts/demo/build.js --local",
     "demo:link": "node scripts/demo/link.js",
     "demo:install": "node scripts/demo/install.js",
@@ -163,7 +164,8 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@babel/core": "^7.24.0",
+    "@ast-grep/napi": "^0.19.4",
+    "@babel/core": "^7.24.3",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.1.0",
@@ -183,18 +185,18 @@
     "@types/js-beautify": "^1.14.3",
     "@types/klaw": "^3.0.6",
     "@types/loader-utils": "^2.0.6",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash": "^4.17.0",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.6",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.30",
     "@types/semver": "^7.5.8",
     "@types/vinyl": "^2.0.11",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
-    "autoprefixer": "^10.4.18",
+    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.4.0",
     "colorette": "^2.0.20",
@@ -226,29 +228,29 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.2.5",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.12.1",
+    "rollup": "^4.13.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.2",
     "tsd": "^0.30.7",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.2",
+    "typescript": "^5.4.3",
     "typescript-transform-paths": "^3.4.7",
     "vinyl": "^3.0.0",
-    "vite": "^5.1.5",
-    "vitest": "^1.3.1",
+    "vite": "^5.2.2",
+    "vitest": "^1.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.90.3",
+    "webpack": "^5.91.0",
     "webpack-build-utils": "^0.0.7"
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
-    "@babel/generator": "7.23.6",
-    "@babel/parser": "7.24.0",
-    "@babel/traverse": "7.24.0",
+    "@babel/generator": "7.24.1",
+    "@babel/parser": "7.24.1",
+    "@babel/traverse": "7.24.1",
     "@babel/types": "7.24.0",
     "@csstools/postcss-is-pseudo-class": "4.0.5",
     "@tailwindcss-mangle/shared": "^2.2.2",
@@ -256,18 +258,21 @@
     "@weapp-core/regex": "^1.0.1",
     "debug": "4.3.4",
     "htmlparser2": "9.1.0",
-    "loader-utils": "2.0.3",
+    "loader-utils": "2.0.4",
     "lru-cache": "10.2.0",
     "magic-string": "0.30.8",
     "md5": "2.3.0",
-    "postcss": "8.4.35",
+    "postcss": "8.4.38",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
-    "postcss-selector-parser": "6.0.15",
+    "postcss-selector-parser": "6.0.16",
     "semver": "7.6.0",
     "tailwindcss-patch": "^2.2.3",
     "webpack-sources": "3.2.3"
   },
-  "packageManager": "pnpm@8.10.2",
+  "optionalDependencies": {
+    "@ast-grep/napi": "^0.19.4"
+  },
+  "packageManager": "pnpm@8.15.4",
   "engines": {
     "node": ">=16.6.0"
   }
