--- a/plugins/cli/tsconfig.json
+++ b/plugins/cli/tsconfig.json
@@ -11,5 +11,16 @@
   "include": [
     "src",
     "test"
-  ]
+  ],
+  "ts-node": {
+    "esm": true,
+    "compilerOptions": {
+      "baseUrl": ".",
+      "paths": {
+        "@/*": [
+          "src/*"
+        ]
+      }
+    }
+  }
 }
